# shantagent

./: .dockerignore  .env.example  .gitignore  README.md  chatbot.db  pyproject.toml  run.py
docker/: Dockerfile  docker-compose.yml
docs/: openapi-doc.md
src/agents/: chatbot.py  react.py  react_agent.py  research_agent.py  state.py
src/agents/bg_tasks/: agent.py  bg_task_agent.py  safety.py  tasks.py
src/core/: __init__.py  llama_guard.py  llm.py  safety.py  settings.py  tracer.py
src/middleware/: logging.py  metrics.py  safety.py
src/routers/: __init__.py  background_task.py  chat.py  react.py  research.py  tasks.py
src/schema/: __init__.py  models.py
src/service/: __init__.py  service.py
